<resources>
    <string name="app_name" translatable="false">DoctorN</string>
    <string name="hello" translatable="false">welcome in doctorN...</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="forget_password" translatable="false">Forget password?</string>
    <string name="signin" translatable="false">Login</string>
    <string name="dont_have_account" translatable="false">I dont have an accoint? create new?!!</string>
    <string name="login_as_doctor" translatable="false">Login as Doctor</string>
    <string name="full_name" translatable="false">Full Name</string>
    <string name="phone" translatable="false">Phone</string>
    <string name="age" translatable="false">Age</string>
    <string name="type">النوع</string>
    <string name="have_account" translatable="false">Have an account? Login !!</string>
    <string name="continu" translatable="false">Continue</string>
    <string name="send" translatable="false">Send</string>
    <string name="notification" translatable="false">Notification</string>
    <string name="empty_list" translatable="false">"No data Found ...."</string>
    <string name="notification_label">there is notification from mus</string>
    <string name="setting">Setting</string>
    <string name="add_balance">Add Balance</string>
    <string name="credit_card">Cred Card</string>
    <string name="suggestions_complaints">Suggestion and Complaints</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy and Policy</string>
    <string name="about_app">about app</string>
    <string name="log_out">Log out</string>
    <string name="msg_title">Message Title</string>
    <string name="msg_body">Message</string>
    <string name="attatch_img">Attatch Photo</string>
    <string name="your_balance">Your Balance:</string>
    <string name="your_balance_value">99 RS</string>
    <string name="withdraw">Withdraw Operation</string>
    <string name="my_account">My account</string>
    <string name="doctor_name">Doctor name</string>
    <string name="account_email_txt">Email:</string>
    <string name="email_value">adel@gmail.com</string>
    <string name="account_phone_txt">Phone:</string>
    <string name="phone_value">01234689987</string>
    <string name="account_age_txt">Age:</string>
    <string name="age_value">24</string>
    <string name="account_gender_txt">Gender:</string>
    <string name="gender_value">ذكر</string>
    <string name="account_balance">Balance</string>
    <string name="account_setting">Setting</string>
    <string name="conversation">Conversation</string>
    <string name="signup_msg">"Make sure that data is correct to be reviewed? "</string>
    <string name="graduate_university">Graduate University</string>
    <string name="graduate_year">Year og Graduation</string>
    <string name="certificate">Certification</string>
    <string name="degree">Degree</string>
    <string name="profession_license">Profession License</string>
    <string name="language">اللغات</string>
    <string name="accept_policy">Accept all Privacy and Policy</string>
    <string name="add_credit_card">Add Credit Card</string>
    <string name="credit_msg">jdhfjgfg urhfrhfh  eihrfghf hedhf yrfhf uyhf ufhfh uss hchccccccccbc xhhxhxh</string>
    <string name="credit_number">Credit Number</string>
    <string name="expire_date_id">Expire Date</string>
    <string name="cvv">CVV</string>
    <string name="ok">Accept</string>
    <string name="signup_hello">welcome to doctorN</string>
    <string name="choosing_day">Choose workdays</string>
    <string name="counseling_time">Counseling Time </string>
    <string name="counseling_price">Counseling Price</string>
    <string name="create_account">Create Account</string>
    <string name="privecy_label">Paragraph Label</string>
    <string name="privacy_policy_subject">jdhfjgfg urhfrhfh  eihrfghf hedhf yrfhf uyhf ufhfh uss hchccccccccbc xhhxhxh</string>
    <string name="patient_name">Patient Name</string>
    <string name="conversation_time">3:00</string>
    <string name="type_msg_here">Type your message here</string>
    <string name="counseling_start">start counseling</string>
    <string name="counseling_end">end counseling</string>
    <string name="counseling_timer">3:00</string>
    <string name="specialist">Specialist</string>
    <string name="specialist_value">value value</string>
    <string name="study">Study</string>
    <string name="job">Job</string>
    <string name="password_empty">please enter password</string>
    <string name="email_empty">please enter email</string>
    <string name="email_invalid">enter avlid email</string>
    <string name="edit_text_empty">content is empty</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="edit_profile">Update Profile</string>
    <string name="change_language">Change language</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="internet_offline">Make sure that internet is connected?!!</string>
    <string name="withdraw_operation">Do Operation</string>
    <string name="operation_num">operation num #</string>
    <string name="money_value">1200 RS</string>
    <string name="time_value">1/1/2019</string>
    <string name="accept_it">Accept it</string>
    <string name="register_as_doctor">Register as Doctor</string>
    <string name="internal">Internal</string>
    <string name="like_count">250</string>
    <string name="our_page">Our Page</string>
    <string name="account">My Account</string>
    <string name="article_label">Article Label</string>
    <string name="reservation">Servation</string>
    <string name="reservate_doctor">Reservate Doctor</string>
    <string name="rate_doctor">Rate Doctor</string>
    <string name="avilable_days">Available Times</string>
    <string name="doctors">Doctors</string>
    <string name="search">Search</string>
    <string name="credit_name">Name in Credit</string>
    <string name="login_as_user">Login as User</string>
    <string name="service_value">Consult remotly medicine</string>
    <string name="service">Service</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="total_price">0 RS</string>
    <string name="total">Total</string>
    <string name="add_discount_copoun">Add discount Copoun</string>
    <string name="add">Add</string>
    <string name="hint">Code</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_balance">Credit Balance</string>
    <string name="current_balance">Current Balance</string>
    <string name="payment_now">Payment Now</string>
    <string name="payment">Payment</string>
    <string name="doctor_detail">Doctor</string>
    <string name="banking_exchange">Banking Trasfer</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="person_name">Person Name</string>
    <string name="saturday">Saturday</string>
    <string name="avilable_time">Available Times:</string>
    <string name="google_maps_key">AIzaSyAYf_0ksVtGMbxoOavZIffQln3eWkT9z-Y</string>
    <string name="my_reservations">My Reservations</string>
    <string name="reservation_time_value">Reservation Date/Time:</string>
    <string name="reservation_time_txt">Reservation Date/Time:</string>
    <string name="payment_method_txt">Payment Method:</string>
    <string name="payment_method_value">paytabs</string>
    <string name="paid_amount_txt">Paid Amount:</string>
    <string name="paid_amount_value">200.0</string>
    <string name="consultation_duration_txt">Consultation Duration:</string>
    <string name="consultation_duration_value">20</string>
    <string name="consultation_price_txt">Consultation Price:</string>
    <string name="consultation_price_value">200</string>
    <string name="transaction_id_txt">Transaction Id:</string>
    <string name="transaction_id_value">4569677</string>
    <string name="work_days_txt">Work Days:</string>
    <string name="work_days_value">xxx</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="amount_msg">Note, the withdrawa process will not be approved if the available amount is less than 100 SAR</string>
    <string name="amount_value">Amount Value</string>
    <string name="wait_loading">Wait For Loading</string>
    <string name="enter_value_great_100">Please enter amount great than 100</string>
    <string name="sending_waiting">Sending and Waiting for Responce</string>
    <string name="currency_type">SAR</string>
    <string name="withdraw_done">Withdraw is Done</string>
    <string name="choose_workdays">Choose your Workdays</string>
    <string name="ok_label">Ok</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear ALl</string>
    <string name="start_work_time">Start Time</string>
    <string name="end_work_time">End Time</string>
    <string name="choose_language">Choose your language</string>
    <string name="choose_photo">please Choose Photo</string>
    <string name="choose_certificate">Choose Specialization</string>
    <string name="choose_specialist">Please choose your specialist</string>
    <string name="all_financial">All Financail</string>
    <string name="all_bank_transaction">All Bank Trans</string>
    <string name="my_financail">My Financail</string>
    <string name="transaction_date_txt">Transaction Date:</string>
    <string name="transaction_type_txt">Transaction Type:</string>
    <string name="transaction_method_txt">Transaction Method:</string>
    <string name="transaction_reason_txt">Transaction Reason:</string>
    <string name="transaction_status_txt">Transaction Status:</string>
    <string name="bank_name_txt">Bank Name:</string>
    <string name="bank_sender_name">Bank Sender Name:</string>
    <string name="bank_acc_number">Bank Acc Number</string>
    <string name="bank_transfer_reference_number">Bank Transfer Reference Number:</string>
    <string name="bank_receipt_link">Bank Receipt Image:</string>
    <string name="click_btn">Click the button above to show list:</string>
    <string name="chat_with_doctor">Chat With Doctor</string>
    <string name="share_using">Share Using:</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="send_audio_msg">Send this Record</string>
    <string name="integer_value">you must enter the age correct</string>
    <string name="university">University:</string>
    <string name="photo_selected">photo selected sucessfully</string>
    <string name="register_as_user">Register As User</string>
    <string name="you_register_as_user">this account registered as doctor</string>
    <string name="you_register_as_doctor">this account is registered as user</string>
</resources>
