<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">


    <TextView
        android:id="@+id/operation_num_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/withdraw_id"
        app:layout_constraintStart_toStartOf="@id/withdraw_id"
        android:text="@string/operation_num"
        android:textColor="@color/darker_gray"/>

    <TextView
        android:id="@+id/money_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/withdraw_id"
        app:layout_constraintStart_toEndOf="@id/operation_num_value"
        android:layout_marginStart="15dp"
        android:textColor="@color/darker_gray"
        android:text="@string/money_value"/>

    <TextView
        android:id="@+id/time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/withdraw_id"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/time_value"
        android:textColor="@color/darker_gray"
        />


    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/accept_it"
        app:layout_constraintTop_toBottomOf="@id/operation_num_value"
        android:layout_marginTop="10dp"/>



</android.support.constraint.ConstraintLayout>