<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doctorAccount.Reservations.ReservationsDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent">

            <ImageView
                android:id="@+id/back_eng"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_arrow_back_eng"
                android:visibility="visible"/>

            <ImageView
                android:id="@+id/fav_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/unlike" />
            <TextView
                android:id="@+id/item_name_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/doctor_detail"
                android:textColor="@color/pupler"
                android:textSize="20sp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingEnd="10dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/doctor_img_id"
                android:layout_width="90dp"
                android:layout_height="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/doc"
                android:scaleType="centerCrop"
                android:layout_marginTop="25dp"/>

            <TextView
                android:id="@+id/doctor_name_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/doctor_img_id"
                android:layout_marginTop="8dp"/>


            <RatingBar
                android:id="@+id/rating_bar_id"
                style="@style/Base.Widget.AppCompat.RatingBar.Small"
                android:numStars="5"
                android:rating="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/doctor_name_id"
                android:layout_marginTop="10dp"
                />


            <TextView
                android:id="@+id/reservation_time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating_bar_id"
                android:textColor="@color/black"
                android:text="@string/reservation_time_txt"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/reservation_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rating_bar_id"
                app:layout_constraintStart_toEndOf="@id/reservation_time_txt"
                android:layout_marginTop="8dp"
                android:text="@string/reservation_time_value"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/payment_method_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reservation_time_txt"
                android:textColor="@color/black"
                android:text="@string/payment_method_txt"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/payment_method_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/reservation_time_txt"
                app:layout_constraintStart_toEndOf="@id/payment_method_txt"
                android:layout_marginTop="8dp"
                android:text="@string/payment_method_value"
                android:layout_marginStart="10dp"
                />

            <TextView
                android:id="@+id/transaction_id_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payment_method_txt"
                android:textColor="@color/black"
                android:text="@string/transaction_id_txt"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/transaction_id_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/payment_method_txt"
                app:layout_constraintStart_toEndOf="@id/transaction_id_txt"
                android:layout_marginTop="8dp"
                android:text="@string/transaction_id_value"
                android:layout_marginStart="10dp"
                />


            <TextView
                android:id="@+id/paid_amount_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/transaction_id_txt"
                android:textColor="@color/black"
                android:text="@string/paid_amount_txt"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/paid_amount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/transaction_id_txt"
                app:layout_constraintStart_toEndOf="@id/paid_amount_txt"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:text="@string/paid_amount_value"
                />

            <TextView
                android:id="@+id/consultation_duration_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/paid_amount_txt"
                android:textColor="@color/black"
                android:text="@string/consultation_duration_txt"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/consultation_duration_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/paid_amount_txt"
                app:layout_constraintStart_toEndOf="@id/consultation_duration_txt"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:text="@string/consultation_duration_value"
                />


            <TextView
                android:id="@+id/consultation_price_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/consultation_duration_txt"
                android:textColor="@color/black"
                android:text="@string/consultation_price_txt"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/consultation_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/consultation_duration_txt"
                app:layout_constraintStart_toEndOf="@id/consultation_price_txt"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:text="@string/consultation_price_value"
                />


            <TextView
                android:id="@+id/work_days_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/consultation_price_txt"
                android:textColor="@color/black"
                android:text="@string/work_days_txt"
                android:layout_marginTop="8dp"
                />

            <TextView
                android:id="@+id/work_days_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/consultation_price_txt"
                app:layout_constraintStart_toEndOf="@id/work_days_txt"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:text="@string/work_days_value"
                />

            <Button
                android:id="@+id/cencel_reservation_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/work_days_value"
                android:layout_marginTop="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="20dp"
                android:text="@string/cancel_reservation"
                android:background="@drawable/red_background"
                android:textColor="@color/White"
                android:textAllCaps="false"/>



        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>