<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edit_round"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <TextView
        android:id="@+id/amount_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_msg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:maxLines="3"
        android:textSize="16sp"
        android:layout_marginTop="15dp"/>

   <android.support.design.widget.TextInputEditText
       android:id="@+id/withdraw_amount_input"
       android:layout_width="0dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/amount_msg"
       android:background="@drawable/edit_round"
      android:hint="@string/amount_value"
       android:textAlignment="center"
       android:layout_marginTop="20dp"
       android:layout_height="50dp"/>

    <Button
        android:id="@+id/withdraw_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/withdraw_amount_input"
        app:layout_constraintStart_toStartOf="@id/withdraw_amount_input"
        app:layout_constraintEnd_toEndOf="@id/withdraw_amount_input"
        android:background="@drawable/button_purple"
        android:text="@string/sending_waiting"
        android:textColor="@color/White"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</android.support.constraint.ConstraintLayout>